Updated Gemfile, added posts

--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 ---
 layout: home
 paginate: true
-alt_title: "Hi, I'm Jess~"
+alt_title: "Hi, I'm Jess"
 sub_title: "I develop AI and machine learning tools for governments."
-image: /assets/images/title.png
+image: /assets/images/city-banner.jpeg
 introduction: |
-  Basically Basic is a [Jekyll theme](https://jekyllrb.com/docs/themes/) meant as a substitute for the default --- [Minima](https://github.com/jekyll/minima). Conventions and features found there are fully supported by **Basically Basic**, with a few enhancements thrown in for good measure:
+  
+  I am a machine learning engineer with a multidisciplinary background in both statistical science and public policy, focusing on applications of AI/ML in optimising decision-making processes for organisations that serve the public. This website is intended to be an informal showcase for some of the projects I've worked on, and maybe some other creative stuff.
 
-  - Clean responsive design with six customizable skins
-  - Curriculum Vitæ/Resume layout powered by [JSON data](http://registry.jsonresume.org/)
-  - About page layout
-  - Disqus Comments and Google Analytics support
-  - SEO best practices via [Jekyll SEO Tag](https://github.com/jekyll/jekyll-seo-tag/)
+  I have worked on a wide variety of projects:
+
+  - Machine learning tools to inform infrastructure funding decisions for [Infrastructure Canada](https://www.infrastructure.gc.ca/index-eng.html)
+  - Predictive AI to improve global governance effectiveness for the [G7 Research Group](http://www.g7.utoronto.ca/about/index.html)
+  - Data science in humanitarian aid and global development for the [Future Impact Group](https://futureimpact.group/)
+  - Research into developing novel spatio-temporal forecasting methods for the [University of Oxford](https://www.ox.ac.uk/)
+
+  I have [Master of Public Policy](https://munkschool.utoronto.ca/mpp) degree from the University of Toronto and a [Master of Science in Statistical Science](https://www.ox.ac.uk/admissions/graduate/courses/msc-statistical-science) degree from the University of Oxford. Please contact me if you want to collaborate!
+
+actions:
+  - label: "Contact"
+    icon: email
+    url: "mailto:jessicakristenr@gmail.com"
+  - label: "Download CV"
+    icon: download
+    url: "/assets/other/cv.pdf"
+    download: "rapson_cv.pdf"
 ---
