Fix G7 website link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ introduction: |
   I have worked on a wide variety of projects:
 
   - Machine learning tools to inform infrastructure funding decisions for [Infrastructure Canada](https://www.infrastructure.gc.ca/index-eng.html)
-  - Predictive AI to improve global governance effectiveness for the [G7 Research Group](http://www.g7.utoronto.ca/about/index.html)
+  - Predictive AI to improve global governance effectiveness for the [G7 Research Group](https://globalgovernanceprogram.org/)
   - Data science in humanitarian aid and global development for the [Future Impact Group](https://futureimpact.group/)
   - Research into developing novel spatio-temporal forecasting methods for the [University of Oxford](https://www.ox.ac.uk/)
 
